# DR-AntiForget

./: .gitignore  READEME.md  README.md  main.py  pyproject.toml  requirements.txt
eval/: README.md  pyproject.toml  run.py
eval/docs/en/: Quickstart.md
eval/docs/zh-CN/: Quickstart.md
eval/scieval/: config.py  inference.py  inference_mt.py  inference_video.py  offline_download.py
eval/scieval/api/: base.py
eval/scieval/dataset/: __init__.py
eval/scieval/dataset/AIME24/: aime24.py
eval/scieval/dataset/AIME25/: aime25.py  grader.py  math_normalize.py  math_parser.py
eval/scieval/dataset/AstroVisBench/: vis_eval_helper.py
eval/scieval/dataset/SGI_Bench_1_0/: experimental_reasoning.py
eval/scieval/dataset/utils/clima_qa/: fa_score.py
eval/scieval/llm/: __init__.py  config.py  qwen3.py
eval/scripts/: AIME24_DR-Tulu-8B.sh  AIME24_Qwen3-4B-Instruct.sh  AIME24_Qwen3-8B.sh  AIME25_DR-Tulu-8B.sh  AIME25_Qwen3-4B-Instruct.sh  AIME25_Qwen3-8B.sh  slurm-91735.out
eval_original/scieval/: config.py  offline_download.py
eval_original/scieval/api/: gpt.py
eval_original/scieval/dataset/: __init__.py  text_mcq.py
eval_original/scieval/llm/: __init__.py
eval_original/scripts/: AIME24_DR-Tulu-8B.sh  AIME24_Qwen3-4B-Instruct.sh  AIME24_Qwen3-8B.sh  AIME25_Qwen3-4B-Instruct.sh  ChemBench_Qwen3-8B.sh
evalscope/: pyproject.toml
evalscope/scripts/AIME24/: AIME24_AgentCPM-Explore-8007.sh  AIME24_DR-Tulu-8B-8001.sh  AIME24_Qwen3-30B-A3B-8008.sh  AIME24_Qwen3-4B-Instruct-8000.sh  AIME24_Qwen3-4B-Thinking-2507-8006.sh  (+2 more)
sft/LlamaFactory/: pyproject.toml
(+39 files in other folders)
