[project]
name = "eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "google-genai>=1.59.0",
    "gradio>=6.3.0",
    "huggingface-hub>=0.36.0",
    "imageio>=2.37.2",
    "ipdb>=0.13.13",
    "json-repair>=0.55.0",
    "latex2sympy2-extended>=1.11.0",
    "loguru>=0.7.3",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "openai>=2.15.0",
    "opencv-python>=4.7.0.72",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pint>=0.25.2",
    "portalocker>=3.2.0",
    "protobuf>=6.33.4",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.1",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "sty>=1.0.6",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tensorflow-hub>=0.16.1",
    "tiktoken>=0.12.0",
    "timeout-decorator>=0.5.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
    "typing-extensions>=4.15.0",
    "validators>=0.35.0",
    "wrapt-timeout-decorator>=1.5.1",
    "xlsxwriter>=3.2.9",
]
